# overeasy

./: .gitignore  LICENSE  README.md  gradio_example.html  pyproject.toml  pytest.ini  warmup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: test.yml  wheels.yml
examples/: basketball_workflow.py  construction_workflow1.py  construction_workflow2.py  construction_workflow3.py  drivers_license_workflow.py  eiffel_photo_workflow.py  kites_workflow.py  kites_workflow_local.py  workflow1.py  workflow2.py  workflow3.py
overeasy/: __init__.py  agents.py  dirs.py  download_utils.py  logging.py  setup.py  visualize.py  visualize_utils.py
overeasy/agents/: __init__.py  dark_mode.txt  model_agents.py  scrape.py  split_join_agent.py  workflow.py
overeasy/agents/misc/: __init__.py  class_map.py  filter_class.py  map_agent.py  max_confidence.py  nms.py  pad_crop.py  split_crop.py  to_classification.py
overeasy/models/: __init__.py
overeasy/models/LLMs/: __init__.py  anthropic.py  claude.py  gemini.py  openai.py  pali_gemma.py  qwenvl.py
overeasy/models/classification/: __init__.py  clip.py  dinov2.py  laion_clip.py  siglip.py
overeasy/models/detection/: __init__.py  detclipv2.py  detic.py  dino.py  glip.py  nms.py  owlv2.py  yoloworld.py
overeasy/models/recognition/: __init__.py  rekognition.py  textract.py
overeasy/server/: image_viewer.py
overeasy/types/: __init__.py  base.py  detections.py  type_utils.py
tests/: conftest.py  test_construction_workflows.py  test_detection_models.py  test_import.py  test_instructor_agents.py  test_large_local_models.py  test_misc_agents.py  test_model_agents.py  test_owl.py  test_saving_vis.py  test_split_join.py
