[tool.poetry]
name = "overeasy"
version = "0.2.2"
description = ""
authors = ["Ani Rahul <anirahul@redshiftai.app>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.10, <3.13"
torch = "^2.0.0"
numpy = "^1.24.3"
opencv-python-headless = "^4.7.0"
Pillow = "^9.4.0"
requests = "^2.32.0"
matplotlib = "^3.8.1"
anthropic = "^0.27.0"
openai = "^1.12.0"
tabulate = "^0.9.0"
transformers = "^4.29.2"
ultralytics = "^8.2.0"
supervision = "^0.18.0"
pydantic = "^2.0.0"
pydantic_numpy = "^5.0.0"
rf_groundingdino = "0.1.2"
rf_segment_anything = "1.0.0"
tiktoken = "^0.7.0"
google-generativeai = "^0.5.0"
open-clip-torch = "^2.0.0"
tqdm = "^4.65.0"
einops = "^0.6.0"
transformers-stream-generator = "0.0.3"
accelerate = "^0.27.0"
instructor = "^1.3.2"
gradio = "4.25.0"
boto3 = "^1.34.121"
groq = "^0.9.0"
litellm = "^1.40.9"
jsonref = "^1.1.0"
google-cloud-aiplatform = "^1.54.1"
backoff = "^2.2.1"
types-tabulate = "^0.9.0.20240106"
types-requests = "^2.32.0.20240622"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"