[tool.poetry]
name = "overeasy"
version = "0.2.5"
description = ""
authors = ["Ani Rahul <anirahul@redshiftai.app>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.10, <3.13"
torch = "^2.3.1"
torchvision = "^0.18.0"
numpy = "^1.24.3"
opencv-python-headless = "^4.7.0"
Pillow = "^9.4.0"
requests = "^2.32.0"
matplotlib = "^3.8.1"
anthropic = "^0.27.0"
tabulate = "^0.9.0"
transformers = "^4.29.2"
ultralytics = "^8.2.0"
supervision = "^0.18.0"
pydantic = ">=2.7.4,<2.8"
pydantic_numpy = "5.0.2"
rf_groundingdino = "0.1.2"
rf_segment_anything = "1.0.0"
tiktoken = "^0.7.0"
google-generativeai = "^0.5.0"
open-clip-torch = "^2.24.0"
tqdm = "^4.65.0"
einops = "^0.6.0"
transformers-stream-generator = "0.0.3"
accelerate = "^0.27.0"
instructor = "^1.3.4"
gradio = "4.25.0"
jsonref = "^1.1.0"
google-cloud-aiplatform = "1.54.1"
pyarrow = "^16.1.0"
backoff = "^2.2.1"
openai = "^1.34.0"
progressbar = "^2.5"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"